--- a/src/main/resources/templates/usuario/carrito.html
+++ b/src/main/resources/templates/usuario/carrito.html
@@ -58,8 +58,9 @@
                             <td th:text="${dorden.nombre}"></td>
                             <td th:text="${dorden.precio}"></td>
                             <td th:text="${dorden.cantidad}"></td>
-                            <td th:text="${dorden.total}"></td>
-                            <td><a href="#" class="btn btn-danger">Quitar</a></td>
+                            <td text-align="right" th:text="${dorden.total}"></td>
+                            <td><a th:href="@{/delete/cart/{id} (id=${dorden.producto.id})}" class="btn btn-danger">Quitar</a>
+                            </td>
                         </tr>
                         </tbody>
                     </table>
