Validación para producto repetido y ver carrito desde la cabecera del template del usuario, opcion carrito

--- a/src/main/resources/templates/usuario/home.html
+++ b/src/main/resources/templates/usuario/home.html
@@ -12,10 +12,10 @@
 
 
     <!-- Bootstrap core CSS -->
-    <link th:href="@{/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
+    <link th:href="@{vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link th:href="@{/css/heroic-features.css}" rel="stylesheet">
+    <link th:href="@{css/heroic-features.css}" rel="stylesheet">
 
 </head>
 
@@ -29,14 +29,12 @@
 
     <!-- Jumbotron Header -->
     <header class="jumbotron my-4">
-        <h1 class="display-3">Bienvenido a Spring Ecommerce 2024</h1>
+        <h1 class="display-3">Bienvenido a Spring Ecommerce 2021</h1>
         <p class="lead">Tu tienda de productos en Línea</p>
     </header>
 
-
     <!-- Page Features -->
     <div class="row text-center">
-
         <div class="col-lg-3 col-md-6 mb-4" th:each="producto:${productos}">
             <div class="card h-100">
                 <img class="card-img-top" th:src="@{/images/{img} (img=${producto.imagen})}" alt="">
@@ -44,13 +42,12 @@
                     <p class="card-text" th:text="${producto.nombre}"></p>
                 </div>
                 <div class="card-footer">
-                    <a th:href="@{/productohome/{id} (id=${producto.id})}" class="btn btn-success">Ver producto</a>
+                    <a th:href="@{productohome/{id} (id=${producto.id})}" class="btn btn-success">Ver producto</a>
                 </div>
             </div>
         </div>
     </div>
     <!-- /.row -->
-
 
 </div>
 <!-- /.container -->
@@ -59,8 +56,8 @@
 <div th:include="usuario/template_usuario.html::footer"></div>
 
 <!-- Bootstrap core JavaScript -->
-<script th:src="@{/vendor/jquery/jquery.min.js}"></script>
-<script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+<script th:src="@{vendor/jquery/jquery.min.js}"></script>
+<script th:src="@{vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
 
 </body>
 
