--- a/src/main/resources/templates/usuario/template_usuario.html
+++ b/src/main/resources/templates/usuario/template_usuario.html
@@ -1,4 +1,5 @@
 <!-- Navigation -->
+
 <div th:fragment="header">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
@@ -19,19 +20,14 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item dropdown"><a
-                            class="nav-link dropdown-toggle" href="#"
-                            id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false"> ADMIN </a>
-                        <div class="dropdown-menu"
-                             aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" th:href="@{/productos}">Productos</a>
-                        </div></li>
+                    <li class="nav-item"><a class="nav-link"
+                                            th:href="@{/getCart}">Carrito</a></li>
+                    <li class="nav-item"><a class="nav-link"
+                                            href="login.html">Login</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-
 
 </div>
 
